k8s/kbm-obmondo-com/kube-prometheus/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
  name: prometheus-k8s
  namespace: monitoring
spec:
  rules:
  - host: prometheus.kbm.obmondo.com
    http:
      paths:
      - backend:
          service:
            name: prometheus-k8s
            port:
              name: web
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - prometheus.kbm.obmondo.com
    secretName: kube-prometheus-prometheus-tls
